# prologviz

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: dynamic.pl  family.pl  kb.pl
prologviz/: __init__.py  __main__.py  cli.py
prologviz/engine/: __init__.py  trace_hook.pl  tracer.py  tree.py
prologviz/renderers/: __init__.py  html.py  terminal.py
prologviz/templates/: trace.html.j2
tests/: conftest.py  test_cli.py  test_html.py  test_terminal.py  test_tracer.py  test_tree.py
