[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prologviz"
version = "0.1.0"
description = "Visualiza el árbol de resolución (backtracking) de programas Prolog de forma legible."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ignacio Martinez" }]
keywords = ["prolog", "swi-prolog", "trace", "visualization", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Prolog",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pyswip>=0.3.2",
    "rich>=13.7",
    "click>=8.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
prologviz = "prologviz.cli:cli"

[project.urls]
Homepage = "https://github.com/prologviz/prologviz"
Issues = "https://github.com/prologviz/prologviz/issues"

[tool.hatch.build.targets.wheel]
packages = ["prologviz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

